--- a/trunk/작업소스/FingerTwist/GameView2P.xib
+++ b/trunk/작업소스/FingerTwist/GameView2P.xib
@@ -27,19 +27,30 @@
 				<int key="NSvFlags">292</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="IBUIImageView" id="1054639596">
+					<object class="IBUIImageView" id="491459997">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">256</int>
-						<string key="NSFrame">{{64, 170}, {200, 145}}</string>
+						<string key="NSFrame">{{0, 1.06}, {320, 238.94}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">4</int>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
-						<object class="NSCustomResource" key="IBUIImage">
+						<object class="NSCustomResource" key="IBUIImage" id="388164760">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">oink.png</string>
+							<string key="NSResourceName">GameLogo.png</string>
 						</object>
+					</object>
+					<object class="IBUIImageView" id="850584620">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">256</int>
+						<string key="NSFrame">{{0, 239}, {320, 240.94}}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<int key="IBUIContentMode">4</int>
+						<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						<reference key="IBUIImage" ref="388164760"/>
 					</object>
 				</object>
 				<string key="NSFrameSize">{320, 480}</string>
@@ -51,8 +62,6 @@
 						<int key="NSID">2</int>
 					</object>
 				</object>
-				<bool key="IBUIOpaque">NO</bool>
-				<bool key="IBUIMultipleTouchEnabled">YES</bool>
 			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -64,15 +73,7 @@
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="191373211"/>
 					</object>
-					<int key="connectionID">5</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">TeamLogoImg</string>
-						<reference key="source" ref="191373211"/>
-						<reference key="destination" ref="1054639596"/>
-					</object>
-					<int key="connectionID">12</int>
+					<int key="connectionID">3</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -91,7 +92,8 @@
 						<reference key="object" ref="191373211"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="1054639596"/>
+							<reference ref="491459997"/>
+							<reference ref="850584620"/>
 						</object>
 						<reference key="parent" ref="360949347"/>
 					</object>
@@ -107,8 +109,13 @@
 						<reference key="parent" ref="360949347"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">10</int>
-						<reference key="object" ref="1054639596"/>
+						<int key="objectID">8</int>
+						<reference key="object" ref="491459997"/>
+						<reference key="parent" ref="191373211"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">9</int>
+						<reference key="object" ref="850584620"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</object>
@@ -127,8 +134,8 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>UIViewController</string>
 					<string>UIResponder</string>
-					<string>TeamLogoView</string>
-					<string>{{560, 275}, {320, 480}}</string>
+					<string>GameView2P</string>
+					<string>{{354, 276}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				</object>
 			</object>
@@ -152,29 +159,25 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">12</int>
+			<int key="maxID">9</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
-					<string key="className">TeamLogoView</string>
+					<string key="className">BaseView</string>
 					<string key="superclassName">UIView</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/TeamLogoView.h</string>
+						<string key="minorKey">BaseClasses/BaseView.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">TeamLogoView</string>
-					<string key="superclassName">UIView</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">TeamLogoImg</string>
-						<string key="NS.object.0">id</string>
-					</object>
+					<string key="className">GameView2P</string>
+					<string key="superclassName">BaseView</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBUserSource</string>
-						<string key="minorKey"/>
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/GameView2P.h</string>
 					</object>
 				</object>
 			</object>
