--- a/trunk/작업소스/defense/GameBoard.xib
+++ b/trunk/작업소스/defense/GameBoard.xib
@@ -27,10 +27,10 @@
 				<int key="NSvFlags">292</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="IBUIImageView" id="749005825">
+					<object class="IBUIImageView" id="643069800">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">256</int>
-						<string key="NSFrame">{{-160, -240}, {640, 960}}</string>
+						<string key="NSFrame">{{-160, -240}, {639.92, 959.88}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -38,7 +38,7 @@
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">map.png</string>
+							<string key="NSResourceName">map5.png</string>
 						</object>
 					</object>
 				</object>
@@ -81,7 +81,7 @@
 						<reference key="object" ref="191373211"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="749005825"/>
+							<reference ref="643069800"/>
 						</object>
 						<reference key="parent" ref="360949347"/>
 					</object>
@@ -97,8 +97,8 @@
 						<reference key="parent" ref="360949347"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">5</int>
-						<reference key="object" ref="749005825"/>
+						<int key="objectID">12</int>
+						<reference key="object" ref="643069800"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</object>
@@ -142,7 +142,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">8</int>
+			<int key="maxID">13</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
